edmc-neptun/environment/network/templates/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Network template for security groups

Parameters:
  Project:
    Description: Project name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{3,20}$
  Component:
    Description: Name of the component
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{3,15}$
  Stage:
    Description: Stage name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{2,15}$
  VpcId:
    Description: Reference of the VpcId from the SSM
    Type: AWS::SSM::Parameter::Value<String>
  JumpHostAllowedCidrIpBlock:
    Description: CidrIp Block which will be have access open to JumpHost
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  JenkinsAllowedCidrIpBlock:
    Description: CidrIp Block which will be have access open to Jenkins
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  VpnConnection:
    Description: CidrIp Block which will be have access open to Jenkins
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  AllowedCidrIpBlock:
    Description: CidrIp Block which will be have access open to Verify App Server
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  ApplicationPort:
    Description: Port for API Application
    Type: String
  DatabasePort:
    Description: Port for Database
    Type: String
  MongodbPort:
    Description: Port for Database
    Type: String

Resources:
  JumpHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for JumpHost
      GroupName: !Sub ${Project}-jumphost-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref JumpHostAllowedCidrIpBlock
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-jumphost-sg

  JumpHostSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project} JumpHostSecurityGroup
        Tier: Standard
        Name: !Sub /jumphost-sg/sg-id
        Value: !Ref JumpHostSecurityGroup
        Tags:
          Name: !Sub ${Project}-jumphost-sg
      
  
  

  

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Verify App
      GroupName: !Sub ${Project}-application-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref VpnConnection
      
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref AlbSecurityGroup
      - IpProtocol: tcp
        FromPort: 443
        ToPort:  443
        SourceSecurityGroupId: !Ref AlbSecurityGroup
      
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-application-sg

  ApplicationSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project} ApplicationSecurityGroup
        Tier: Standard
        Name: !Sub /application-sg/sg-id
        Value: !Ref ApplicationSecurityGroup
        Tags:
          Name: !Sub ${Project}-application-sg
 
  

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Database
      GroupName: !Sub ${Project}-database-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref DatabasePort
        ToPort: !Ref DatabasePort
        SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      - IpProtocol: tcp
        FromPort: !Ref MongodbPort
        ToPort: !Ref MongodbPort
        SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      - IpProtocol: tcp
        FromPort: !Ref DatabasePort
        ToPort: !Ref DatabasePort
        SourceSecurityGroupId: !Ref JumpHostSecurityGroup
      - IpProtocol: tcp
        FromPort: !Ref DatabasePort
        ToPort: !Ref DatabasePort
        CidrIp: !Ref VpnConnection
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-database-sg

  DatabaseSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project} DatabaseSecurityGroup
        Tier: Standard
        Name: !Sub /database-sg/sg-id
        Value: !Ref DatabaseSecurityGroup
        Tags:
          Name: !Sub ${Project}-database-sg
 
Outputs:
  JumpHostSecurityGroupId:
    Description: The ID of JumpHost Security group
    Value: !Ref JumpHostSecurityGroup
  JumpHostSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the JumpHost Security group is stored
    Value: !Ref JumpHostSecurityGroupParam
  ApplicationSecurityGroupId:
    Description: The ID of Application Security group
    Value: !Ref ApplicationSecurityGroup
  ApplicationSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the Application Security group is stored
    Value: !Ref ApplicationSecurityGroupParam
  DatabaseSecurityGroupId:
    Description: The ID of Database Security group
    Value: !Ref DatabaseSecurityGroup
  DatabaseSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the Database Security group is stored
    Value: !Ref DatabaseSecurityGroupParam
